supporting_material/cloudformation/challenge1.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Elsa Teklu / Udacity - This template deploys a EC2 insatance and security group

Parameters:
  myVPC:
    Description: VPC used to deploy our resources
    Type: AWS::EC2::VPC::Id
  PublicSubnet:
    Description: Subnet used to be for the web server
    Type: AWS::EC2::Subnet::Id
  AMItoUse:
    Description: AMI to use for our base image
    Type: tring

Resources:
  myWebAccessSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId:
        Ref: myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0

  myWebServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: !Ref AMItoUse
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet:
            - Ref: "myWebAccessSecurityGroup"
          SubnetId:
            Ref: "PublicSubnet"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd

  #Resources:
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      Tags:
        - Key: Name
          Value: CF-EC2Instance

      ImageId: ami-0ceecbb0f30a902a6 # Amazon Linux 2 Oregon

      InstanceType: t2.micro

      KeyName: us-west-2-key

      SecurityGroupIds:
        - !Ref EC2SecurityGroup

      UserData: !Base64 |
        #!/bin/bash
        # Use this for your user data (script from top to bottom)
        # install httpd (Linux 2 version)
        yum update -y
        yum install -y httpd
        systemctl start httpd
        systemctl enable httpd
        echo "<h1>Hello World from $(hostname -f)</h1>" > /var/www/html/index.html
